* [nt]roff: ".rm" and ".rr" no longer issue a warning if one of their
  arguments is not a defined macro or register, respectively.
* troff: Fixed an error that sometimes caused the "x X Track" command to miss
  in intermediate output.
* troff, dpost: The short font name is now part of the "x font" commands
  in intermediate output for Type 1, TrueType, and OpenType fonts.
* dpost: The PostScript "awidthshow" operator is now used with the "-e2" and
  "-e3" encoding options, resulting in reasonable output in combination with
  the ".track" request.
* dpost: With the "-e2" and "-e3" encoding options, use only word spaces as
  indicated by troff for the "widthshow" PostScript operator. This usually
  results in slightly larger PostScript output but is better encodable when
  distilled to PDF so that PDF files become smaller.
* eqn: Avoid to recognize delimiters inside troff escape sequences with "("
  or "[" as well as directly behind a sequence of backslash characters.

Release 060905
* [nt]roff: The new ".brnl" request causes a break each time a newline is
  encountered at the end of a text input line. Unlike nofill mode, text is
  still wrapped to the line length.
* [nt]roff: The new ".brpnl" request causes a break and a spread each time
  a newline is encountered at the end of a text input line (as if it were
  attached a "\p"). The "\p" escape sequence changes its semantics in this
  mode and causes a break without a spread.
* [nt]roff: The new ".lpfx" request allows to print a string whenever
  a new output line is started. This is mainly useful to implement a
  historic form of block quotation.
* [nt]roff: The predefined number registers "\n[.in]", "\n[.hy]",
  "\n[.int]", "\n[.lt]", "\n[.pn]", "\n[.psr]", and "\n[.sr]" have been
  added.
* [nt]roff: The semantics of the number registers "\n(.x" (remaining space
  on current output line) and "\n(.y" (current actual indent) are now
  documented.